# birds-eye-view

./: README.md  TurtlebotSetup.sh
afrl_driver/: CMakeLists.txt  README.md  package.xml
afrl_driver/include/afrl_driver/: driver.h  patterns.h
afrl_driver/launch/: driver.launch  turtlebot_20_hokuyo.launch  turtlebot_hokuyo.launch
afrl_driver/src/: driver.cpp  driver2.cpp  patterns.cpp
ar_track_alvar/launch/: ardrone_tag.launch  flying_tag.launch
bebop_tag_following/: CMakeLists.txt  README.md  mainpage.dox  package.xml
bebop_tag_following/launch/: bebop.launch  controller.launch  orbslam.launch
bebop_tag_following/src/: State.h  bebop_tag_following.cpp  bebop_tag_following.h
comparative_localization/: CMakeLists.txt  README.md  mainpage.dox  package.xml
comparative_localization/launch/: cl.launch
comparative_localization/src/: Controller.cpp  Controller.h  cl.cpp
cooperative_localization/: CMakeLists.txt  README.md  commands.txt  mainpage.dox  package.xml
cooperative_localization/launch/: cl-complete.launch  cl.launch  gmapping.launch
cooperative_localization/src/: cl.cpp
odom_tf/: CMakeLists.txt  README.md  mainpage.dox  package.xml
odom_tf/launch/: transform.launch
odom_tf/src/: transformBroadcast.cpp
random_walk/: CMakeLists.txt  CMakeLists.txt~  package.xml
random_walk/launch/: random_walk.launch
random_walk/src/: .random_walk.cpp.swp  random_walk.cpp  random_walk2.cpp
