<package>
  <name>bebop_tag_following</name>
  <version>0.0.1</version>
  <description>Mapping using an occupancy grid </description>
  <maintainer email="yiannisr@cse.sc.edu">Ioannis Rekleitis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/grid_mapper</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>ardrone_autonomy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
 <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>bullet</run_depend>



</package>
